@@ -2,6 +2,10 @@ ispCP ω 1.0.1 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 2009-07-23 Laurent Declercq
+	- SETUP:
+		* Fixed #1908: ask_vhost subroutine - gethostbyaddr() will always fails
+
+2009-07-23 Laurent Declercq
 	- DOCS:
 		* Updated Debian INSTALL
 	- DAEMON:
